fixing minor errors and swagger docs
