# docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/api/v1/customers": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all customers",
                 "produces": [
                     "application/json"
@@ -38,6 +43,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new customer with the provided details",
                 "consumes": [
                     "application/json"
@@ -87,6 +97,11 @@
         },
         "/api/v1/customers/{customer_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a customer by their unique identifier",
                 "produces": [
                     "application/json"
@@ -132,6 +147,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing customer's details",
                 "consumes": [
                     "application/json"
@@ -192,6 +212,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a customer by their ID",
                 "tags": [
                     "Customer"
@@ -233,6 +258,11 @@
         },
         "/api/v1/customers/{customer_id}/favorites": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all favorite products for the specified customer",
                 "produces": [
                     "application/json"
@@ -281,6 +311,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Adds a product to the specified customer's list of favorite products",
                 "consumes": [
                     "application/json"
@@ -337,6 +372,11 @@
         },
         "/api/v1/customers/{customer_id}/favorites/{product_id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Removes a product from the customer's list of favorite products",
                 "produces": [
                     "application/json"
@@ -494,12 +534,12 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@example.com"
+                    "example": "frodo.baggins@example.com"
                 },
                 "name": {
                     "type": "string",
                     "minLength": 3,
-                    "example": "John Doe"
+                    "example": "Frodo Baggins"
                 }
             }
         },
@@ -508,7 +548,7 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@example.com"
+                    "example": "frodo.baggins@example.com"
                 },
                 "id": {
                     "type": "string",
@@ -516,7 +556,7 @@
                 },
                 "name": {
                     "type": "string",
-                    "example": "John Doe"
+                    "example": "Frodo Baggins"
                 }
             }
         },
@@ -529,12 +569,12 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@example.com"
+                    "example": "frodo.baggins@example.com"
                 },
                 "name": {
                     "type": "string",
                     "minLength": 3,
-                    "example": "John Doe"
+                    "example": "Frodo Baggins"
                 }
             }
         },
@@ -583,6 +623,14 @@
                     "example": 999.99
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
